# py-mail-admin

./: .editorconfig  .gitignore  README.md  fabfile.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  vetur.config.js
app/: __init__.py  config.py  ext.py
app/cli/: __init__.py  mailboxes.py
app/models/: __init__.py  aliases.py  domains.py  mailboxes.py  users.py
app/schemas/: __init__.py  aliases.py  domains.py  mailboxes.py  users.py
app/services/: __init__.py  domains.py
app/views/: aliases.py  auth.py  domains.py  mailboxes.py  metrics.py
contrib/: last_login.sh  mail-admin.service  uwsgi.ini
contrib/sql/: 00-initial.sql  01-last-login.sql
webapp/: index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: App.vue  api.ts  main.css  main.ts  routes.ts  vuex.d.ts
webapp/src/components/: AliasesTable.vue  AppHeader.vue  AppLayout.vue  DateLabel.vue  MailboxesTable.vue  Messages.vue  NavLink.vue  Notification.vue  SlideoverPanel.vue  StatusLabel.vue  XButton.vue
webapp/src/components/cards/: AliasesCard.vue  DomainsCard.vue  MailboxesCard.vue
webapp/src/components/charts/: TotalsBarChart.vue
webapp/src/components/forms/: XCheckbox.vue  XInput.vue  XSelect.vue
webapp/src/components/panels/: AliasFormPanel.vue  DomainFormPanel.vue  (+1 more)
webapp/src/helpers/: messages.ts
webapp/src/pages/: AliasDetails.vue  Aliases.vue  Dashboard.vue  DomainDetails.vue  Domains.vue  Login.vue  MailboxDetails.vue  Mailboxes.vue
webapp/src/store/: aliases.ts  auth.ts  domains.ts  index.ts  mailboxes.ts  messages.ts
